aggiunta oscar a pagina actor, unione route searchbar con actors/moveis, fix grafici minori